--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,7 @@
-# Prerequisites
-*.d
+cmake-build-debug/*
+.idea/*
+*.swp
 
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
 
 # Executables
 *.exe
